--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: "Web based parametric font editor"
 # analytics: UA-12312312-3
 # gauges: 50f2b533613f5d7c8000000d
 author :
-  name : Simon Egli
-  github : simonegli
-#  twitter : simonegli
+  name : Metapolator
+  github : metapolator
+  twitter : metapolator
   email: simon.egli+metapolator@gmail.com
