--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,4 @@ author :
   github : metapolator
   twitter : metapolator
   email: simon.egli+metapolator@gmail.com
+  googlepluscommunity: https://plus.google.com/u/0/communities/101806205848089229614
