--- a/webapp_configs/nginx.conf
+++ b/webapp_configs/nginx.conf
@@ -7,4 +7,11 @@ server {
        include uwsgi_params;
        uwsgi_pass 127.0.0.1:3031;
    }
+
+   location /static/ {
+        access_log off;
+        expires 30d;
+        error_page 404 /raw404.html;
+        root /var/www/webpy-app/metapolator;
+    }
 }
