configuration of supervisor for webpy should use -w argument

--- a/webapp_configs/supervisor.conf
+++ b/webapp_configs/supervisor.conf
@@ -1,13 +1,15 @@
 [program:uwsgi]
 command = uwsgi
       --plugins python
-      --wsgi-file /var/www/webpy-app/metapolator/mfg.py
+      -w mfg
+      --master
+      --processes 2
       --pythonpath /var/www/webpy-app/metapolator
       --chdir /var/www/webpy-app/metapolator
       --socket 127.0.0.1:3031
       --env PRODUCTION=1
-      --uid www-data
-      --gid www-data
-user = www-data
+      --uid root
+      --gid root
+user = root
 stdout_logfile=/var/log/uwsgi/uwsgi.log
 stderr_logfile=/var/log/uwsgi/uwsgi.log
