fixed nginx to make available to download OTF

--- a/webapp_configs/nginx.conf
+++ b/webapp_configs/nginx.conf
@@ -14,4 +14,11 @@ server {
         error_page 404 /raw404.html;
         root /var/www/webpy-app/metapolator;
     }
+
+    location *~ ^/users {
+        access_log off;
+        expires 30d;
+        error_page 404 /raw404.html;
+        root /var/www/webpy-app/metapolator;
+    }
 }
