--- a/webapp_configs/nginx.conf
+++ b/webapp_configs/nginx.conf
@@ -15,7 +15,7 @@ server {
         root /var/www/webpy-app/metapolator;
     }
 
-    location *~ ^/users {
+    location ~ ^/users {
         access_log off;
         expires 30d;
         error_page 404 /raw404.html;
