do not cache user working directory in web browser

--- a/webapp_configs/nginx.conf
+++ b/webapp_configs/nginx.conf
@@ -16,7 +16,8 @@ server {
 
     location ~ ^/users {
         access_log off;
-        expires 30d;
+        expires off;
+        add_header        Cache-Control no-cache;
         root /var/www/webpy-app/metapolator;
     }
 }
