--- a/webapp_configs/nginx.conf
+++ b/webapp_configs/nginx.conf
@@ -17,6 +17,6 @@ server {
     location ~ ^/users {
         access_log off;
         expires off;
-        add_header        Cache-Control no-cache;
+        add_header        Cache-Control "no-cache";
     }
 }
