--- a/webapp_configs/nginx.conf
+++ b/webapp_configs/nginx.conf
@@ -4,6 +4,8 @@ server {
    server_name alpha.metapolator.com;
    root /var/www/webpy-app/metapolator;
 
+   sendfile off;
+
    location / {
        include uwsgi_params;
        uwsgi_pass 127.0.0.1:3031;
