move python source code of project to separate directory

--- a/webapp_configs/supervisor.conf
+++ b/webapp_configs/supervisor.conf
@@ -1,7 +1,7 @@
 [program:uwsgi]
 command = uwsgi
       --plugins python
-      -w mfg
+      -w run
       --pythonpath /var/www/webpy-app/metapolator
       --chdir /var/www/webpy-app/metapolator
       --socket 127.0.0.1:3031
