for not restarting processes touch-reload option should be used to reload uwsgi processes

--- a/webapp_configs/supervisor.conf
+++ b/webapp_configs/supervisor.conf
@@ -8,6 +8,7 @@ command = uwsgi
       --env PRODUCTION=1
       --uid root
       --gid root
+      --touch-reload /var/www/webpy-app/metapolator/.process
 user = root
 stdout_logfile=/var/log/uwsgi/uwsgi.log
 stderr_logfile=/var/log/uwsgi/uwsgi.log
