direct access to templates for debugging mode

--- a/webapp_configs/nginx.conf
+++ b/webapp_configs/nginx.conf
@@ -5,11 +5,17 @@ server {
    root /var/www/webpy-app/metapolator;
 
    sendfile off;
+   
+   location /templates {
+      access_log off;
+      root /var/www/webpy-app/metapolator;
+   }
 
    location / {
        include uwsgi_params;
        uwsgi_pass 127.0.0.1:3031;
    }
+
 
    location /static/ {
         access_log off;
