--- a/webapp_configs/supervisor.conf
+++ b/webapp_configs/supervisor.conf
@@ -2,6 +2,7 @@
 command = uwsgi
       --plugins python
       -w run
+      --processes 5
       --pythonpath /var/www/webpy-app/metapolator
       --chdir /var/www/webpy-app/metapolator
       --socket 127.0.0.1:3031
