--- a/webapp_configs/supervisor.conf
+++ b/webapp_configs/supervisor.conf
@@ -3,6 +3,7 @@ command = uwsgi
       --plugins python
       -w run
       --processes 5
+      --master
       --pythonpath /var/www/webpy-app/metapolator
       --chdir /var/www/webpy-app/metapolator
       --socket 127.0.0.1:3031
