--- a/webapp_configs/supervisor.conf
+++ b/webapp_configs/supervisor.conf
@@ -11,4 +11,5 @@ command = uwsgi
       --touch-reload /var/www/webpy-app/metapolator/.process
 user = root
 stdout_logfile=/var/log/uwsgi/uwsgi.log
-stderr_logfile=/var/log/uwsgi/uwsgi.log
+stderr_logfile=/var/log/uwsgi/uwsgi.err
+stopsignal=QUIT
