Install and run nginx in Docker

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -16,3 +16,5 @@ stdout_logfile=/var/log/uwsgi/uwsgi.log
 stderr_logfile=/var/log/uwsgi/uwsgi.err
 stopsignal=QUIT
 
+[program:nginx]
+command=/usr/bin/nginx
