uwsgi from usr local

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 command=/usr/bin/mysqld_safe
 
 [program:uwsgi]
-command = uwsgi
+command = /usr/local/bin/uwsgi
       --plugins python
       -w run
       --pythonpath /var/www/metapolator
