redis server and celery

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -135,15 +135,14 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ; interpreted as relative to this file.  Included files *cannot*
 ; include files themselves.
 
-[program:uwsgi]
-command = /usr/local/bin/uwsgi
-      --plugins python
-      -w run
-      --pythonpath /var/www/metapolator
-      --chdir /var/www/metapolator
-      --socket 127.0.0.1:3031
-      --env PRODUCTION=1
-      --uid root
-      --gid root
+
+[program:redis-server]
+command = redis-server
+uid = redis
+gid = redis
+
+[program:celery]
+command = celery worker -A metapolator.tasks --workdir /var/www/metapolator
+
 user=root
 stopsignal=QUIT
