supervisor with redis-server

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -135,14 +135,15 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ; interpreted as relative to this file.  Included files *cannot*
 ; include files themselves.
 
-
-[program:redis-server]
-command = redis-server
-uid = redis
-gid = redis
+[program:redis]
+command=/usr/local/bin/redis-server /etc/redis.conf
+autostart=true
+autorestart=true
+user=root
+stdout_logfile=/var/log/redis/stdout.log
+stderr_logfile=/var/log/redis/stderr.log
 
 [program:celery]
-command = celery worker -A metapolator.tasks --workdir /var/www/metapolator
-
+command=celery worker -A metapolator.tasks --workdir /var/www/metapolator
 user=root
 stopsignal=QUIT
