Run supervisor with all prepared scripts

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,8 +1,7 @@
 [program:redis]
-command=/usr/local/bin/redis-server /etc/redis.conf
+command=redis-server /etc/redis.conf
 autostart=true
 autorestart=true
-user=user
 stdout_logfile=/var/log/redis/stdout.log
 stderr_logfile=/var/log/redis/stderr.log
 
@@ -10,9 +9,12 @@ stderr_logfile=/var/log/redis/stderr.log
 command=celery worker -A metapolator.tasks --workdir /var/www/metapolator
 user=user
 stopsignal=QUIT
+stdout_logfile=/var/www/metapolator/celery.log
+stderr_logfile=/var/www/metapolator/celery.err.log
 
 [program:app]
-command=python app.py
+command=python run.py
+directory=/var/www/metapolator
 user=user
 stopsignal=QUIT
 stdout_logfile=/var/www/metapolator/app.log
