--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,5 @@
 [program:redis]
-command=redis-server /etc/redis.conf
+command=redis-server /etc/redis/redis.conf
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/redis/stdout.log
