access to container now available by ssh

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -19,3 +19,9 @@ user=user
 stopsignal=QUIT
 stdout_logfile=/var/www/metapolator/app.log
 stderr_logfile=/var/www/metapolator/app.err.log
+
+[program:sshd]
+command=/usr/sbin/sshd -D
+stdout_logfile=/var/www/metapolator/%(program_name)s.log
+stderr_logfile=/var/www/metapolator/%(program_name)s.log
+autorestart=true
