Changed supervisor config

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,9 +1,5 @@
-[program:redis]
-command=redis-server /etc/redis/redis.conf
-autostart=true
-autorestart=true
-stdout_logfile=/var/log/redis/stdout.log
-stderr_logfile=/var/log/redis/stderr.log
+[supervisord]
+nodaemon=true
 
 [program:celery]
 command=celery worker -A metapolator.tasks --workdir /var/www/metapolator
@@ -20,8 +16,8 @@ stopsignal=QUIT
 stdout_logfile=/var/www/metapolator/app.log
 stderr_logfile=/var/www/metapolator/app.err.log
 
+[program:redis]
+command=redis-server /etc/redis/redis.conf
+
 [program:sshd]
 command=/usr/sbin/sshd -D
-stdout_logfile=/var/www/metapolator/%(program_name)s.log
-stderr_logfile=/var/www/metapolator/%(program_name)s.log
-autorestart=true
