--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ MySQL-python==1.2.5
 Paste==1.7.5.1
 SQLAlchemy==0.8.3
 redis==2.8.0
-simplejson==3.3.1
+ujson==1.33
 bcrypt==1.0.2
 lxml==3.2.3
 nose==1.3.0
