--- a/next/package.json
+++ b/next/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "GPL-3.0",
   "devDependencies": {
-    "bower": "~1.3.2"
+    "bower": "~1.3.2",
+    "intern": "~1.6.2"
   }
 }
