--- a/next/package.json
+++ b/next/package.json
@@ -14,6 +14,11 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "bower": "~1.3.2",
-    "intern": "~1.6.2"
+    "intern": "~1.6.2",
+    "gulp-require-convert": "0.0.1",
+    "gulp": "~3.6.2",
+    "gonzales": "~1.0.7",
+    "gulp-replace": "~0.3.0",
+    "gulp-insert": "~0.3.0"
   }
 }
