print logs of supervisor to stdout.
It has to be easy way to monitor application errors.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,19 +5,25 @@ nodaemon=true
 command=celery worker -A metapolator.tasks --workdir /var/www/metapolator
 user=user
 stopsignal=QUIT
-stdout_logfile=/var/www/metapolator/celery.log
-stderr_logfile=/var/www/metapolator/celery.err.log
+stdout_events_enabled=true
+stderr_events_enabled=true
 
 [program:app]
 command=python run.py
 directory=/var/www/metapolator
 user=user
 stopsignal=QUIT
-stdout_logfile=/var/www/metapolator/app.log
-stderr_logfile=/var/www/metapolator/app.err.log
+stdout_events_enabled=true
+stderr_events_enabled=true
 
 [program:redis]
 command=redis-server /etc/redis/redis.conf
 
 [program:sshd]
 command=/usr/sbin/sshd -D
+
+[eventlistener:stdout]
+command = supervisor_stdout
+buffer_size = 100
+events = PROCESS_LOG
+result_handler = supervisor_stdout:event_handler
