--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "test": "test"
   },
   "dependencies": {
-      "gulp": "~3.5.5",
-      "bower": "~1.2.8",
-      "gulp-bower-files": "~0.1.11",
-      "gulp-concat": "~2.1.7",
-      "gulp-size": "~0.1.3",
-      "gulp-uglify": "~0.2.1",
-      "gulp-util": "~2.2.14",
-      "gulp-minify-css": "~0.3.0",
-      "gulp-rename": "~1.1.0",
-      "gulp-debug": "~0.2.0"
+    "gulp": "~3.5.5",
+    "bower": "~1.2.8",
+    "gulp-bower-files": "~0.1.11",
+    "gulp-concat": "~2.1.7",
+    "gulp-size": "~0.1.3",
+    "gulp-uglify": "~0.2.1",
+    "gulp-util": "~2.2.14",
+    "gulp-minify-css": "~0.3.0",
+    "gulp-rename": "~1.1.0",
+    "gulp-debug": "~0.2.0"
+  },
+  "devDependencies": {
+    "jsdom": "~0.10.6",
+    "libxmljs": "~0.10.0"
   }
 }
