--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "next/app/lib/ufoJS"]
 	path = next/app/lib/ufoJS
-	url = git@github.com:graphicore/ufoJS.git
+	url = http://github.com/graphicore/ufoJS.git
 [submodule "next/app/lib/obtainJS"]
 	path = next/app/lib/obtainJS
-	url = git@github.com:graphicore/obtainJS.git
+	url = http://github.com/graphicore/obtainJS.git
