--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "requirejs-domready": "~2.0.1",
     "requirejs-text": "~2.0.12",
     "less.js": "~1.7.0",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "js-yaml": "~3.1.0"
   }
 }
