--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-insert": "~0.3.0"
   },
   "dependencies": {
+    "express": "~4.7.2",
     "jsdom": "~0.10.5",
     "libxmljs": "~0.9.0",
     "requirejs": "~2.1.14",
