--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "gulp-insert": "~0.3.0"
   },
   "dependencies": {
+    "commander": "~2.3.0",
     "express": "~4.7.2",
     "jsdom": "~0.10.5",
     "libxmljs": "~0.9.0",
     "requirejs": "~2.1.14",
     "lie": "~2.7.6",
     "immutable-complex": "~3.0.4",
-    "gonzales": "~1.0.7"
+    "gonzales": "~1.0.7",
+    "helmsman": "~0.4.0",
+    "rootpath": "~0.1.2"
   }
 }
