Add ES6 direct proxies to metapolator
This includes the harmony-reflect shim that patches Proxy from the
older version of the draft to the newer one (in V8)

a dummy module es6/Proxy to show our dependencies

the setup for require js in various places

a small test case to see it work

MISSING: we need to invoke nodejs with --harmony

use a new hash bang line to start node in a portable fashion with the --harmony flag

--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "less.js": "~1.7.0",
     "bootstrap": "~3.1.1",
     "js-yaml": "~3.1.0",
-    "angular-ui-codemirror": "~0.1.6"
+    "angular-ui-codemirror": "~0.1.6",
+    "harmony-reflect": "~1.1.0"
   }
 }
