shell command to create a stand-alone red-pill instance that can be served statically this includes a metapolator project (ufo) directory
concatenates all needed js files into one file
makes a single css file from all less files

prepare the current html file with a simple, comment based switch to serve
the new merged main.css and main.js file, instead the of the sources

make a HTTP 200 status code when when served without directory listing

improvements based on comments by @rrthomas

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gulp-require-convert": "0.0.1",
     "gulp": "~3.6.2",
     "gulp-replace": "~0.3.0",
-    "gulp-insert": "~0.3.0"
+    "gulp-insert": "~0.3.0",
+    "less": "~1.7.5"
   },
   "dependencies": {
     "commander": "~2.3.0",
