Add git-setup and hub to Vagrant box

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -17,7 +17,7 @@ SHARED_DIR=/vagrant
 
 # System setup
 sudo apt-get update && sudo apt-get -y upgrade
-sudo apt-get -y install git bash-completion npm nodejs-legacy # nodejs-legacy gives us /usr/bin/node
+sudo apt-get -y install git ruby bash-completion npm nodejs-legacy # nodejs-legacy gives us /usr/bin/node
 
 # User setup
 if ! grep metapolator $HOME/.bashrc; then
@@ -49,6 +49,14 @@ npm install
 
 # bash-completion setup
 cp bash-completion ~/.bash_completion
+
+# git setup
+./git-setup
+
+# hub setup
+sudo gem install hub
+mkdir -p ~/bin
+hub hub standalone > ~/bin/hub
 END
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
