Make check for existing metapolator checkout more conservative

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -27,7 +27,7 @@ fi
 
 # Clone metapolator (read-write if we have an SSH key)
 cd $SHARED_DIR
-if test ! -d metapolator; then
+if test ! -e metapolator; then
     GIT_URL=https://github.com/metapolator/metapolator.git
     CHECKOUT_TYPE=read-only
     if test -e /vagrant/.ssh; then
