--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -35,7 +35,7 @@ SHARED_DIR=/vagrant
 
 # System setup
 sudo apt-get update && sudo apt-get -y upgrade
-sudo apt-get -y install git ruby bash-completion npm nodejs-legacy # nodejs-legacy gives us /usr/bin/node
+sudo apt-get -y install git tree ruby bash-completion npm nodejs-legacy # nodejs-legacy gives us /usr/bin/node
 
 # User setup
 if ! grep metapolator $HOME/.bashrc; then
