Use vagrant-cachier to use system's cache for packages if possible

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -102,6 +102,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     config.vm.network "forwarded_port", guest: i, host: i
   end
 
+  # Use vagrant-cachier to get cached packages if available
+  if Vagrant.has_plugin?("vagrant-cachier")
+    # Configure cached packages to be shared between instances of the same base box.
+    config.cache.scope = :box
+  end
+
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
