Move to requirejs, change over to using ufoJS/lib/xml/main for XML stuff.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "gulp": "~3.6.2",
     "gulp-replace": "~0.3.0",
     "gulp-insert": "~0.3.0",
-    "less": "~1.7.5"
+    "less": "~1.7.5",
+    "nexpect": "~0.4.2"
   },
   "dependencies": {
     "commander": "~2.3.0",
