--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "immutable-complex": "~3.0.4",
     "gonzales": "~1.0.7",
     "helmsman": "~0.4.0",
-    "rootpath": "~0.1.2"
+    "rootpath": "~0.1.2",
+    "util-logging": "~0.0.1",
+    "path": "~0.4.9",
+    "util": "~0.10.3",
+    "inherits": "2.0.1"
   }
 }
