--- a/red-pill-demo/project/data/com.metapolator/project.yaml
+++ b/red-pill-demo/project/data/com.metapolator/project.yaml
@@ -1,17 +1,39 @@
 masters:
   base:
-    cpsLocalFile: base.cps
     cpsChain:
+      - lib/centreline-skeleton-to-symmetric-outline.cps
       - base.cps
-      - centreline-skeleton-to-symmetric-outline.cps
+    skeleton: skeleton.base
+# this is just an enhancement of base
+  enhanced:
+    cpsChain:
+      - lib/centreline-skeleton-to-symmetric-outline.cps
+      - base.cps
+      - lib/point-child-base.cps
+      - lib/weight.cps
+      - lib/scale.cps
+      - enhanced.cps
+    skeleton: skeleton.base
+# based on inheriting all via @dictionary
+# this would be good to have it working for 
+# the interpolation patterns
+  inherited:
+    cpsChain:
+      - lib/centreline-skeleton-to-symmetric-outline.cps
+      - lib/point-child-base.cps
+      - lib/single-inheritance.cps
+      - lib/weight.cps
+      - lib/scale.cps
+      - inherited.cps
     skeleton: skeleton.base
   interpolated:
-    cpsLocalFile: interpolated.cps
     cpsChain:
+      - lib/interpolate-2.cps
       - interpolated.cps
     skeleton: skeleton.base
-  bold:
-    cpsLocalFile: bold.cps
+  metapolated:
     cpsChain:
-      - bold.cps
+      - lib/centreline-skeleton-to-symmetric-outline.cps
+      - lib/metapolate-2.cps
+      - metapolated.cps
     skeleton: skeleton.base
