--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "metapolator-next",
-  "version": "0.0.0",
+  "name": "metapolator",
+  "version": "0.1.0",
   "description": "parametric font creation application",
-  "main": "(none)",
-  "directories": {
-    "doc": "docs"
+  "homepage": "http://metapolator.com",
+  "bugs": {
+    "url": "https://github.com/metapolator/metapolator/issues/"
   },
   "scripts": {
     "test": "cd app/tests; ./run_tests"
   },
-  "repository": "",
-  "author": "",
+  "directories": {
+    "bin": "bin"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/metapolator/metapolator.git"
+  },
   "license": "GPL-3.0",
   "devDependencies": {
     "bower": "~1.3.2",
