--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "commander": "~2.3.0",
     "express": "~4.7.2",
     "jsdom": "~0.10.5",
-    "libxmljs": "~0.9.0",
+    "libxmljs": "^0.13.0",
     "requirejs": "~2.1.14",
     "lie": "~2.7.6",
     "immutable-complex": "~3.0.4",
