current red-pill demo and slider demo

--- a/red-pill-demo/project/data/com.metapolator/project.yaml
+++ b/red-pill-demo/project/data/com.metapolator/project.yaml
@@ -21,6 +21,6 @@ masters:
 #   metapolated:
 #     cpsFile: metapolated.cps
 #     skeleton: skeleton.base
-#   interpolated:
-#     cpsFile: interpolated.cps
-#     skeleton: skeleton.base
+  interpolated:
+    cpsFile: interpolated.cps
+    skeleton: skeleton.base
