#343 real parameter editing

--- a/purple-pill/project/data/com.metapolator/project.yaml
+++ b/purple-pill/project/data/com.metapolator/project.yaml
@@ -1,26 +1,7 @@
 masters:
+  flexmaster:
+    cpsFile: flexmaster.cps
+    skeleton: skeleton.base  
   base:
     cpsFile: base.cps
-    skeleton: skeleton.base
-# condensed light
-  cl:
-    cpsFile: condensed-light.cps
-    skeleton: skeleton.base
-# wide light
-  wl:
-    cpsFile: wide-light.cps
-    skeleton: skeleton.base
-# condensed extra bold
-  ceb:
-    cpsFile: condensed-extra-bold.cps
-    skeleton: skeleton.base
-# wide extra bold
-  web:
-    cpsFile: wide-extra-bold.cps
-    skeleton: skeleton.base
-  metapolated:
-    cpsFile: metapolated.cps
-    skeleton: skeleton.base
-  interpolated:
-    cpsFile: interpolated.cps
     skeleton: skeleton.base
