#375 start with flexmaster + duplicate master (and cps)

--- a/purple-pill/project/data/com.metapolator/project.yaml
+++ b/purple-pill/project/data/com.metapolator/project.yaml
@@ -2,3 +2,6 @@ masters:
   base:
     cpsFile: base.cps
     skeleton: skeleton.base
+  regular:
+    cpsFile: lib/parameters.cps
+    skeleton: skeleton.base
