--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "js-yaml": "~3.1.0",
     "angular-ui-codemirror": "~0.1.6",
     "harmony-reflect": "~1.1.0",
-    "event-emitter.js": "~0.2.0"
+    "event-emitter.js": "~0.2.0",
+    "jszip": "~2.5.0"
   }
 }
