commander.js: merge yet more harmless code to get closer to upstream
As of now, we are about as close to upstream as we can get.

I am waiting for upstream to respond to my latest PR and will continue
to feed them a new one each time one is accepted until I have pushed all
our improvements and fixes upstream, or found upstream equivalents or
nice workarounds.

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "util": "~0.10.3",
     "inherits": "2.0.1",
     "chokidar": "^0.10.4",
-    "socket.io": "^1.2.0"
+    "socket.io": "^1.2.0",
+    "graceful-readlink": ">= 1.0.0"
   }
 }
