--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "devDependencies": {
-      "uglify-js": "1.3.4"
-    , "jshint": "0.9.1"
-    , "recess": "1.1.6"
-    , "connect": "2.1.3"
-    , "hogan.js": "2.0.0"
+    "uglify-js": "1.3.4",
+    "jshint": "0.9.1",
+    "recess": "1.1.6",
+    "connect": "2.1.3",
+    "hogan.js": "2.0.0",
+    "electron-prebuilt": "~0.25.2"
   }
 }
