--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
-    "bower": "~1.3.2",
-    "intern": "~2.0.1",
-    "regenerator": "~0.6.5",
-    "gulp-require-convert": "0.0.1",
+    "bower": "^1.3.12",
     "gulp": "~3.6.2",
-    "gulp-replace": "~0.3.0",
     "gulp-insert": "~0.3.0",
+    "gulp-replace": "~0.3.0",
+    "gulp-require-convert": "0.0.1",
+    "intern": "~2.0.1",
     "less": "~1.7.5",
-    "nexpect": "~0.4.2"
+    "nexpect": "~0.4.2",
+    "regenerator": "~0.6.5"
   },
   "dependencies": {
     "commander": "~2.3.0",
