Updated bower.json file
Included d3, jquery and jquery.ui

--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,9 @@
     "jszip": "~2.5.0",
     "mustache.js": "~2.0.0",
     "file-saver.js": "~1.20150304.1",
-    "opentype.js": "~0.4.7"
+    "opentype.js": "~0.4.7",
+    "d3": "~3.5.5",
+    "jquery": "~2.1.4",
+    "jquery.ui": "~1.11.4"
   }
 }
