Add Canola-min submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/lib/obtainJS"]
 	path = app/lib/obtainJS
 	url = https://github.com/graphicore/obtainJS.git
+[submodule "examples/Canola-min"]
+	path = examples/Canola-min
+	url = https://github.com/metapolator/Canola-min
