--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/graphicore/obtainJS.git
 [submodule "examples/Canola-min"]
 	path = examples/Canola-min
-	url = https://github.com/metapolator/Canola-min
+	url = https://github.com/metapolator/Canola-min.git
 [submodule "examples/Canola-full"]
 	path = examples/Canola-full
-	url = git@github.com:metapolator/Canola-full.git
+	url = https://github.com/metapolator/Canola-full.git
