jshint default setup has changed as it seems, this adds some options

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,4 +1,7 @@
 {
+    "undef": true,
+    // is useful but not as a default "unused": true,
+    "globals": {"define": false, "require": false},
     "laxcomma": true,
     "laxbreak": true
 }
