updated red-pill demo

--- a/red-pill-demo/project/data/com.metapolator/project.yaml
+++ b/red-pill-demo/project/data/com.metapolator/project.yaml
@@ -2,6 +2,7 @@ masters:
   base:
     cpsFile: base.cps
     skeleton: skeleton.base
+    propertiesFile: elementPropertiesDB/base.cps
 # condensed light
   cl:
     cpsFile: condensed-light.cps
@@ -18,9 +19,9 @@ masters:
   web:
     cpsFile: wide-extra-bold.cps
     skeleton: skeleton.base
-#   metapolated:
-#     cpsFile: metapolated.cps
-#     skeleton: skeleton.base
+  metapolated:
+    cpsFile: metapolated.cps
+    skeleton: skeleton.base
   interpolated:
     cpsFile: interpolated.cps
     skeleton: skeleton.base
