--- a/red-pill-demo/project/glyphs.skeleton.base/contents.plist
+++ b/red-pill-demo/project/glyphs.skeleton.base/contents.plist
@@ -68,5 +68,7 @@
     <string>x.glif</string>
     <key>z</key>
     <string>z.glif</string>
+    <key>space</key>
+    <string>space.glif</string>
   </dict>
 </plist>
