Updated nodejs dependencies, more nodejs versions in travis
Updated ufoJS (which requires updating jsdom and libxmljs)

The travis update is analogous to:
https://github.com/graphicore/ufoJS/commit/d241698cba19c41f3394f222a5d216b6ad081303

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,22 @@
+sudo: false
+
 language: node_js
 node_js:
   - "0.10"
+  - "0.12"
+  - "4"
+  - "5"
+
+# These are workarounds for travis not building libxmljs
+# found here: https://github.com/polotek/libxmljs/issues/339#issuecomment-142504275
+# It is likeley that we wont need this for a long time.
+env:
+    - CXX=g++-4.8
+
+addons:
+    apt:
+        sources:
+        - ubuntu-toolchain-r-test
+        packages:
+        - g++-4.8
+
