Run the shell based tests directly in the shell, not via node.
That prints all output to the console and also prevents the
test runner to appear hung.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "README.md"
   ],
   "scripts": {
-    "test": "cd app/tests; ./run_tests"
+    "test": "cd app/tests; ./run_tests && cd lib/export && ./test.sh"
   },
   "directories": {
     "bin": "bin",
