Big refactoring: select rules that apply to elements.
This was inspired by https://github.com/servo/servo/wiki/Css-selector-matching-meeting-2013-07-19

It makes the engine on initial execution just bit faster, (from > 7 seconds
selector-engine-time to <= 6 seconds on a heavy job of 30 seconds).
I was hoping for bigger gains. However, It shifts a lot of responsibility
into SelectorEngine and relieves ParamaterCollection and other CPS/{elements}
which is a rather good thing.

--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,8 @@
     "d3": "~3.5.5",
     "jquery": "~2.1.4",
     "jquery.ui": "~1.11.4",
-    "marked": "~0.3.3"
+    "marked": "~0.3.3",
+    "bloomfilter.js": "graphicore/bloomfilter.js#more-exposed-api"
   },
   "resolutions": {
     "angular": "^1"
