--- a/package.json
+++ b/package.json
@@ -34,33 +34,20 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
-    "bower": "^1.3.12",
-    "gulp": "~3.6.2",
-    "gulp-insert": "~0.3.0",
-    "gulp-replace": "~0.3.0",
-    "gulp-require-convert": "0.0.1",
     "intern": "~2.0.1",
     "less": "~1.7.5",
     "nexpect": "~0.4.2",
     "regenerator": "~0.6.5"
   },
   "dependencies": {
-    "commander": "~2.3.0",
     "express": "~4.7.2",
     "jsdom": "~3",
     "libxmljs": "~0.15.0",
     "requirejs": "~2.1.14",
     "lie": "~2.7.6",
-    "immutable-complex": "~3.0.4",
-    "gonzales": "~1.0.7",
     "helmsman": "~0.4.0",
     "rootpath": "~0.1.2",
-    "util-logging": "~0.0.1",
-    "path": "~0.4.9",
-    "util": "~0.10.3",
-    "inherits": "2.0.1",
     "chokidar": "^0.10.4",
-    "socket.io": "^1.2.0",
-    "graceful-readlink": ">= 1.0.0"
+    "socket.io": "^1.2.0"
   }
 }
