--- a/bower.json
+++ b/bower.json
@@ -21,27 +21,23 @@
     "app/lib/bower_components"
   ],
   "dependencies": {
-    "requirejs": "~2.1.11",
-    "angular": "~1.3.15",
-    "requirejs-domready": "~2.0.1",
-    "requirejs-text": "~2.0.12",
-    "less.js": "~1.7.0",
-    "bootstrap": "~3.1.1",
-    "js-yaml": "~3.1.0",
-    "angular-ui-codemirror": "~0.1.6",
-    "harmony-reflect": "~1.1.0",
-    "event-emitter.js": "~0.2.0",
-    "jszip": "~2.5.0",
-    "mustache.js": "~2.0.0",
-    "file-saver.js": "~1.20150304.1",
-    "opentype.js": "~0.4.7",
-    "d3": "~3.5.5",
-    "jquery": "~2.1.4",
-    "jquery.ui": "~1.11.4",
-    "marked": "~0.3.3",
-    "bloomfilter.js": "graphicore/bloomfilter.js#more-exposed-api"
-  },
-  "resolutions": {
-    "angular": "^1"
+    "requirejs": ">=2.2.0",
+    "angular": ">=1.5.3",
+    "requirejs-domReady": ">=2.0.1",
+    "requirejs-text": ">=2.0.12",
+    "less.js": ">=2.6.1",
+    "bootstrap": ">=3.1.1",
+    "file-saver.js": ">=1.20150304.1",
+    "opentype.js": ">=0.4.7",
+    "d3": ">=3.5.5",
+    "jquery": ">=2.1.4",
+    "jquery.ui": ">=1.11.4",
+    "Atem-RequireJS-Config": "git@github.com:graphicore/Atem-RequireJS-Config.git",
+    "Atem-MOM-Toolkit": "git@github.com:graphicore/Atem-MOM-Toolkit.git",
+    "Atem-CPS-Toolkit": "git@github.com:graphicore/Atem-CPS-Toolkit",
+    "Atem-MOM": "git@github.com:graphicore/Atem-MOM.git",
+    "metapolator-cpsLib": "git@github.com:metapolator/metapolator-cpsLib",
+    "angular-ui-sortable": "~0.14.0",
+    "Atem-Property-Language": "graphicore/Atem-Property-Language"
   }
 }
