--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "jquery": ">=2.1.4",
     "jquery.ui": ">=1.11.4",
     "jszip": ">=3.0.0",
+    "marked": ">=0.3.5",
     "Atem-RequireJS-Config": "https://github.com/graphicore/Atem-RequireJS-Config.git",
     "Atem-MOM-Toolkit": "https://github.com/graphicore/Atem-MOM-Toolkit.git",
     "Atem-CPS-Toolkit": "https://github.com/graphicore/Atem-CPS-Toolkit.git",
